--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ before_install:
   - docker network create --driver=bridge --subnet=192.168.0.0/16 --opt="com.docker.network.driver.mtu=1450" --opt="com.docker.network.bridge.name=redd0" nanobox
   - ifconfig
   - docker pull nanobox/logvac
+  - docker pull nanobox/mist
 
 script: sudo test/run_all.sh
